Temporarily block pointer events to try to avoid touch bleed through

--- a/app/components/layout/page-layout.module.css
+++ b/app/components/layout/page-layout.module.css
@@ -114,6 +114,10 @@
 	overflow-y: auto;
 }
 
+.block-pointer-events {
+	pointer-events: none;
+}
+
 /* Menu */
 .menu {
 	display: flex;
